--- a/static/index.html
+++ b/static/index.html
@@ -4,7 +4,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta name="description" content="cloud.gov is a Platform-as-a-Service
-      based on Cloud Foundry offered by 18F Infrastructure enabling agile teams
+      based on Cloud Foundry offered by AusDTO Infrastructure enabling agile teams
       to deploy software as fast as they can iterate.">
     <meta property="og:type" content="website">
     <meta property="og:title" content="cloud.gov deck">
